--- a/partials/skillCard.html
+++ b/partials/skillCard.html
@@ -1,15 +1,16 @@
-<div>
-    <div></div>
-    <h2>TypeScript</h2>
-    <img src="https://img.icons8.com/external-tal-revivo-color-tal-revivo/48/external-typescript-an-open-source-programming-language-developed-and-maintained-by-microsoft-logo-color-tal-revivo.png"
-        alt="" />
-    <div>
-        <ul>
-            <li>Well versed in TS.</li>
-            <li>Used across various projects, including practicum with Impulse Studios.</li>
-            <li>Opinion: all the JS quirks without the scary type-unsafety.</li>
-        </ul>
-    </div>
-    <progress value="3" max="5"></progress>
+<div class="container">
+    <div class="accent-tab padding2"></div>
+    <div class="flex column padding3">
+        <h2>Skill name</h2>
+        <img src="" alt="skill icon" />
+        <div class="padding2">
+            <ul>
+                <li>Talking point 1</li>
+                <li>Talking point 2</li>
+                <li>Talking point 3</li>
+            </ul>
+        </div>
+        <progress value="" max="5"></progress>
 
+    </div>
 </div>
