Add comment regarding icon

--- a/partials/skillCard.html
+++ b/partials/skillCard.html
@@ -2,6 +2,7 @@
     <div class="accent-tab padding2"></div>
     <div class="flex column padding3">
         <h2>Skill name</h2>
+        <!-- Replace with SVG or add src -->
         <img src="" alt="skill icon" />
         <div class="padding2">
             <ul>
