--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -22,6 +22,7 @@
         --text: hsl(80, 22%, 92%);
         --subtext: hsl(80, 22%, 20%);
         --background: hsl(83, 27%, 6%);
+        --subbackground: hsl(83, 27%, 10%);
         --primary: hsl(80, 28%, 71%);
         --secondary: hsl(80, 29%, 30%);
         --accent: hsl(80, 33%, 50%);
@@ -90,6 +91,12 @@ a {
 
 a:hover {
     color: var(--secondary);
+}
+
+img {
+    width: 100%;
+    border-radius: var(--spacing2);
+    /* margin: var(--spacing2); */
 }
 
 .btn,
@@ -213,13 +220,17 @@ section {
 
 .container {
     margin: var(--spacing2) auto;
-    padding: 0 var(--spacing3);
-    /* background-color: var(--secondary); */
-    border-radius: var(--spacing3);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: var(--spacing2);
 }
 
-@media (max-width: 600px) {
+.card{
+    background-color: var(--subbackground);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: var(--spacing3);
+
+}
+
+@media (max-width: 640px) {
     .flex {
         flex-direction: column;
     }
