--- a/partials/skillCard.html
+++ b/partials/skillCard.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container card">
     <div class="accent-tab padding2"></div>
     <div class="flex column padding3">
         <h2>Skill name</h2>
