--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -9,7 +9,7 @@
 @media (prefers-color-scheme: light) {
     :root {
         --text: hsl(80, 22%, 8%);
-        --subtext: hsl(80, 22%, 80%);
+        --subtext: hsl(80, 22%, 60%);
         --background: hsl(83, 27%, 94%);
         --subbackground: hsl(83, 27%, 90%);
         --primary: hsl(80, 28%, 29%);
@@ -21,12 +21,12 @@
 @media (prefers-color-scheme: dark) {
     :root {
         --text: hsl(80, 22%, 92%);
-        --subtext: hsl(80, 22%, 20%);
+        --subtext: hsl(80, 22%, 40%);
         --background: hsl(83, 27%, 6%);
         --subbackground: hsl(83, 27%, 10%);
         --primary: hsl(80, 28%, 71%);
         --secondary: hsl(80, 29%, 30%);
-        --accent: hsl(80, 33%,49%);
+        --accent: hsl(80, 33%, 49%);
     }
 }
 
@@ -83,6 +83,9 @@ h2 {
 
 p {
     margin: var(--spacing2);
+}
+small{
+    color: var(--subtext);
 }
 
 a {
@@ -218,6 +221,7 @@ section {
     border-top-left-radius: var(--spacing1);
     border-top-right-radius: var(--spacing1);
 }
+
 .left-accent-tab {
     border-left: var(--spacing2) solid var(--accent);
     border-radius: var(--spacing1);
@@ -230,12 +234,49 @@ section {
     padding: var(--spacing2);
 }
 
-.card{
+.card {
     background-color: var(--subbackground);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: var(--spacing2);
 
 }
+
+
+/* Custom partials and componenets */
+
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: var(--spacing2);
+    background-color: var(--subbackground);
+}
+
+.navbar .logo {
+    width: 10%;
+}
+
+.nav-links {
+    margin: auto var(--spacing5);
+}
+
+.nav-links>a {
+    margin: var(--spacing3);
+    font-size: var(--fsize2);
+    color: var(--text);
+}
+
+.nav-links>a:hover {
+    color: var(--accent);
+}
+
+.theme-toggle {
+    padding: 0;
+    background-color: transparent;
+    color: var(--accent);
+}
+
+/* Responsiveness */
 
 @media (max-width: 640px) {
     .flex {
