--- a/partials/projectCard.html
+++ b/partials/projectCard.html
@@ -3,6 +3,9 @@
     <div class="flex">
         <img class="margin3" src="" alt="project img">
         <div class="container column">
+            <p>
+                Project paragraph.
+            </p>
             <ul>
                 <li>Point 1</li>
                 <li>Point 2</li>
