--- a/partials/skillCard.html
+++ b/partials/skillCard.html
@@ -1,9 +1,7 @@
-<div class="container card">
-    <div class="accent-tab padding2"></div>
+<div class="container card top-accent-tab">
     <div class="flex column padding3">
-        <h2>Skill name</h2>
-        <!-- Replace with SVG or add src -->
-        <img src="" alt="skill icon" />
+        <h2>SKill name</h2>
+        <svg class="skill-icon"></svg>
         <div class="padding2">
             <ul>
                 <li>Talking point 1</li>
@@ -11,7 +9,6 @@
                 <li>Talking point 3</li>
             </ul>
         </div>
-        <progress value="" max="5"></progress>
-
+        <progress value="3" max="5"></progress>
     </div>
 </div>
