--- a/mechanical-metal/src/pages/index.astro
+++ b/mechanical-metal/src/pages/index.astro
@@ -1,12 +1,18 @@
 ---
-import Navbar from "../components/navbar.astro"
+import HomeBanner from '../components/homeBanner.astro'
 import ProjectCard from "../components/projectCard.astro"
 import SkillCard from "../components/skillCard.astro"
-import Footer from "../components/footer.astro"
+import BaseLayout from "../layouts/baseLayout.astro"
 
-import '../styles/styles.css'
 ---
 
+<BaseLayout>
+
+	<h1>What's gud?</h1>
+</BaseLayout>
+
+
+<!-- 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -17,10 +23,13 @@ import '../styles/styles.css'
   </head>
   <body>
 
-	<Navbar></Navbar>
+	<header>
+		<Navbar/>
+	</header>
 
-
-
+	<main>
+		<HomeBanner/>
+	</main>
 
 
 	<Footer></Footer>
@@ -28,4 +37,4 @@ import '../styles/styles.css'
 		// Add the script imports here laters
 	</script>
   </body>
-</html>
+</html> -->
