Refactor layout with props

--- a/mechanical-metal/src/components/homeBanner.astro
+++ b/mechanical-metal/src/components/homeBanner.astro
@@ -23,6 +23,7 @@ import "../styles/styles.css";
     <Image class:list={"banner-img"} src={bannerImage} alt="banner photo" />
   </div>
   <div class="center margin5">
+    <!-- TODO: make this smoothly scroll down to first section -->
     <button style="font-size: var(--spacing4);" class="outline-btn"
       >Check out my stuff</button
     >
