--- a/mechanical-metal/src/layouts/baseLayout.astro
+++ b/mechanical-metal/src/layouts/baseLayout.astro
@@ -3,6 +3,8 @@ import Navbar from "../components/navbar.astro"
 import Footer from "../components/footer.astro"
 
 import '../styles/styles.css'
+
+const {layoutProps} = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -10,7 +12,7 @@ import '../styles/styles.css'
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>aabuharrus</title>
+    <title>{layoutProps.title}</title>
 </head>
 <body>
     <header>
