--- a/mechanical-metal/src/components/footer.astro
+++ b/mechanical-metal/src/components/footer.astro
@@ -52,3 +52,26 @@
     </div>
   </section>
 </footer>
+
+<style>
+  .footer {
+    /* background-color: var(--subbackground); */
+    border-top: 2px solid var(--primary);
+    border-radius: var(--spacing2);
+  }
+
+  .ftr-head {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: var(--spacing7);
+    /* margin: var(--spacing2); */
+    padding: var(--spacing2);
+    border-bottom: 2px solid var(--primary);
+    border-radius: var(--spacing2);
+  }
+
+  .ftr-head .icon {
+    margin: 0 var(--spacing3);
+  }
+</style>
