--- a/mechanical-metal/src/components/navbar.astro
+++ b/mechanical-metal/src/components/navbar.astro
@@ -136,3 +136,36 @@
     </div>
   </div>
 </nav>
+
+<style>
+  .navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: var(--spacing2);
+    background-color: var(--subbackground);
+  }
+  .navbar .logo {
+    width: 10%;
+  }
+
+  .nav-links {
+    margin: auto var(--spacing5);
+  }
+
+  .nav-links > a {
+    margin: var(--spacing3);
+    font-size: var(--fsize2);
+    color: var(--text);
+  }
+
+  .nav-links > a:hover {
+    color: var(--accent);
+  }
+
+  .theme-toggle {
+    padding: 0;
+    background-color: transparent;
+    color: var(--accent);
+  }
+</style>
