--- a/mechanical-metal/src/components/navbar.astro
+++ b/mechanical-metal/src/components/navbar.astro
@@ -10,14 +10,131 @@
       </div>
 
       <div class="nav-links">
-        <button class="theme-toggle">
+        <button id="theme-toggle" class="theme-toggle" onclick="theme">
           <!-- sun and moon combo -->
           <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"><path d="M9.173 14.83a4 4 0 1 1 5.657-5.657"/><path d="m11.294 12.707l.174.247a7.5 7.5 0 0 0 8.845 2.492A9 9 0 0 1 5.642 18.36M3 12h1m8-9v1M5.6 5.6l.7.7M3 21L21 3"/></g></svg> -->
           <!-- Moon twinkle -->
-          <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><g fill="none" stroke="currentColor" stroke-dasharray="4" stroke-dashoffset="4" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"><path d="M13 4h1.5M13 4h-1.5M13 4v1.5M13 4v-1.5"><animate id="lineMdMoonAltLoop0" fill="freeze" attributeName="stroke-dashoffset" begin="0.7s;lineMdMoonAltLoop0.begin+6s" dur="0.4s" values="4;0"/><animate fill="freeze" attributeName="stroke-dashoffset" begin="lineMdMoonAltLoop0.begin+2s;lineMdMoonAltLoop0.begin+4s" dur="0.4s" values="4;0"/><animate fill="freeze" attributeName="stroke-dashoffset" begin="lineMdMoonAltLoop0.begin+1.2s;lineMdMoonAltLoop0.begin+3.2s;lineMdMoonAltLoop0.begin+5.2s" dur="0.4s" values="0;4"/><set fill="freeze" attributeName="d" begin="lineMdMoonAltLoop0.begin+1.8s" to="M12 5h1.5M12 5h-1.5M12 5v1.5M12 5v-1.5"/><set fill="freeze" attributeName="d" begin="lineMdMoonAltLoop0.begin+3.8s" to="M12 4h1.5M12 4h-1.5M12 4v1.5M12 4v-1.5"/><set fill="freeze" attributeName="d" begin="lineMdMoonAltLoop0.begin+5.8s" to="M13 4h1.5M13 4h-1.5M13 4v1.5M13 4v-1.5"/></path><path d="M19 11h1.5M19 11h-1.5M19 11v1.5M19 11v-1.5"><animate id="lineMdMoonAltLoop1" fill="freeze" attributeName="stroke-dashoffset" begin="1.1s;lineMdMoonAltLoop1.begin+6s" dur="0.4s" values="4;0"/><animate fill="freeze" attributeName="stroke-dashoffset" begin="lineMdMoonAltLoop1.begin+2s;lineMdMoonAltLoop1.begin+4s" dur="0.4s" values="4;0"/><animate fill="freeze" attributeName="stroke-dashoffset" begin="lineMdMoonAltLoop1.begin+1.2s;lineMdMoonAltLoop1.begin+3.2s;lineMdMoonAltLoop1.begin+5.2s" dur="0.4s" values="0;4"/><set fill="freeze" attributeName="d" begin="lineMdMoonAltLoop1.begin+1.8s" to="M17 11h1.5M17 11h-1.5M17 11v1.5M17 11v-1.5"/><set fill="freeze" attributeName="d" begin="lineMdMoonAltLoop1.begin+3.8s" to="M18 12h1.5M18 12h-1.5M18 12v1.5M18 12v-1.5"/><set fill="freeze" attributeName="d" begin="lineMdMoonAltLoop1.begin+5.8s" to="M19 11h1.5M19 11h-1.5M19 11v1.5M19 11v-1.5"/></path><path d="M19 4h1.5M19 4h-1.5M19 4v1.5M19 4v-1.5"><animate id="lineMdMoonAltLoop2" fill="freeze" attributeName="stroke-dashoffset" begin="2s;lineMdMoonAltLoop2.begin+6s" dur="0.4s" values="4;0"/><animate fill="freeze" attributeName="stroke-dashoffset" begin="lineMdMoonAltLoop2.begin+2s" dur="0.4s" values="4;0"/><animate fill="freeze" attributeName="stroke-dashoffset" begin="lineMdMoonAltLoop2.begin+1.2s;lineMdMoonAltLoop2.begin+3.2s" dur="0.4s" values="0;4"/><set fill="freeze" attributeName="d" begin="lineMdMoonAltLoop2.begin+1.8s" to="M20 5h1.5M20 5h-1.5M20 5v1.5M20 5v-1.5"/><set fill="freeze" attributeName="d" begin="lineMdMoonAltLoop2.begin+5.8s" to="M19 4h1.5M19 4h-1.5M19 4v1.5M19 4v-1.5"/></path></g><path fill="none" stroke="currentColor" stroke-dasharray="56" stroke-dashoffset="56" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 6 C7 12.08 11.92 17 18 17 C18.53 17 19.05 16.96 19.56 16.89 C17.95 19.36 15.17 21 12 21 C7.03 21 3 16.97 3 12 C3 8.83 4.64 6.05 7.11 4.44 C7.04 4.95 7 5.47 7 6 Z"><animate fill="freeze" attributeName="stroke-dashoffset" dur="0.6s" values="56;0"/></path></svg> -->
+          <svg
+            id="moon-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            ><g
+              fill="none"
+              stroke="currentColor"
+              stroke-dasharray="4"
+              stroke-dashoffset="4"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="1"
+              ><path d="M13 4h1.5M13 4h-1.5M13 4v1.5M13 4v-1.5"
+                ><animate
+                  id="lineMdMoonAltLoop0"
+                  fill="freeze"
+                  attributeName="stroke-dashoffset"
+                  begin="0.7s;lineMdMoonAltLoop0.begin+6s"
+                  dur="0.4s"
+                  values="4;0"></animate><animate
+                  fill="freeze"
+                  attributeName="stroke-dashoffset"
+                  begin="lineMdMoonAltLoop0.begin+2s;lineMdMoonAltLoop0.begin+4s"
+                  dur="0.4s"
+                  values="4;0"></animate><animate
+                  fill="freeze"
+                  attributeName="stroke-dashoffset"
+                  begin="lineMdMoonAltLoop0.begin+1.2s;lineMdMoonAltLoop0.begin+3.2s;lineMdMoonAltLoop0.begin+5.2s"
+                  dur="0.4s"
+                  values="0;4"></animate><set
+                  fill="freeze"
+                  attributeName="d"
+                  begin="lineMdMoonAltLoop0.begin+1.8s"
+                  to="M12 5h1.5M12 5h-1.5M12 5v1.5M12 5v-1.5"></set><set
+                  fill="freeze"
+                  attributeName="d"
+                  begin="lineMdMoonAltLoop0.begin+3.8s"
+                  to="M12 4h1.5M12 4h-1.5M12 4v1.5M12 4v-1.5"></set><set
+                  fill="freeze"
+                  attributeName="d"
+                  begin="lineMdMoonAltLoop0.begin+5.8s"
+                  to="M13 4h1.5M13 4h-1.5M13 4v1.5M13 4v-1.5"></set></path
+              ><path d="M19 11h1.5M19 11h-1.5M19 11v1.5M19 11v-1.5"
+                ><animate
+                  id="lineMdMoonAltLoop1"
+                  fill="freeze"
+                  attributeName="stroke-dashoffset"
+                  begin="1.1s;lineMdMoonAltLoop1.begin+6s"
+                  dur="0.4s"
+                  values="4;0"></animate><animate
+                  fill="freeze"
+                  attributeName="stroke-dashoffset"
+                  begin="lineMdMoonAltLoop1.begin+2s;lineMdMoonAltLoop1.begin+4s"
+                  dur="0.4s"
+                  values="4;0"></animate><animate
+                  fill="freeze"
+                  attributeName="stroke-dashoffset"
+                  begin="lineMdMoonAltLoop1.begin+1.2s;lineMdMoonAltLoop1.begin+3.2s;lineMdMoonAltLoop1.begin+5.2s"
+                  dur="0.4s"
+                  values="0;4"></animate><set
+                  fill="freeze"
+                  attributeName="d"
+                  begin="lineMdMoonAltLoop1.begin+1.8s"
+                  to="M17 11h1.5M17 11h-1.5M17 11v1.5M17 11v-1.5"></set><set
+                  fill="freeze"
+                  attributeName="d"
+                  begin="lineMdMoonAltLoop1.begin+3.8s"
+                  to="M18 12h1.5M18 12h-1.5M18 12v1.5M18 12v-1.5"></set><set
+                  fill="freeze"
+                  attributeName="d"
+                  begin="lineMdMoonAltLoop1.begin+5.8s"
+                  to="M19 11h1.5M19 11h-1.5M19 11v1.5M19 11v-1.5"></set></path
+              ><path d="M19 4h1.5M19 4h-1.5M19 4v1.5M19 4v-1.5"
+                ><animate
+                  id="lineMdMoonAltLoop2"
+                  fill="freeze"
+                  attributeName="stroke-dashoffset"
+                  begin="2s;lineMdMoonAltLoop2.begin+6s"
+                  dur="0.4s"
+                  values="4;0"></animate><animate
+                  fill="freeze"
+                  attributeName="stroke-dashoffset"
+                  begin="lineMdMoonAltLoop2.begin+2s"
+                  dur="0.4s"
+                  values="4;0"></animate><animate
+                  fill="freeze"
+                  attributeName="stroke-dashoffset"
+                  begin="lineMdMoonAltLoop2.begin+1.2s;lineMdMoonAltLoop2.begin+3.2s"
+                  dur="0.4s"
+                  values="0;4"></animate><set
+                  fill="freeze"
+                  attributeName="d"
+                  begin="lineMdMoonAltLoop2.begin+1.8s"
+                  to="M20 5h1.5M20 5h-1.5M20 5v1.5M20 5v-1.5"></set><set
+                  fill="freeze"
+                  attributeName="d"
+                  begin="lineMdMoonAltLoop2.begin+5.8s"
+                  to="M19 4h1.5M19 4h-1.5M19 4v1.5M19 4v-1.5"></set></path
+              ></g
+            ><path
+              fill="none"
+              stroke="currentColor"
+              stroke-dasharray="56"
+              stroke-dashoffset="56"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M7 6 C7 12.08 11.92 17 18 17 C18.53 17 19.05 16.96 19.56 16.89 C17.95 19.36 15.17 21 12 21 C7.03 21 3 16.97 3 12 C3 8.83 4.64 6.05 7.11 4.44 C7.04 4.95 7 5.47 7 6 Z"
+              ><animate
+                fill="freeze"
+                attributeName="stroke-dashoffset"
+                dur="0.6s"
+                values="56;0"></animate></path
+            ></svg
+          >
 
           <!-- Sun -->
           <svg
+            id="sun-icon"
             xmlns="http://www.w3.org/2000/svg"
             width="24"
             height="24"
@@ -169,3 +286,45 @@
     color: var(--accent);
   }
 </style>
+
+<script is:inline>
+  const theme = (() => {
+    console.log("theme ran");
+    const localStorageTheme = localStorage?.getItem("theme") ?? "";
+    if (["dark", "light"].includes(localStorageTheme)) {
+      return localStorageTheme;
+    }
+    if (window.matchMedia("(prefers-color-scheme: light)").matches) {
+      return "light";
+    }
+    return "dark";
+  })();
+
+  // Apply theme based on what's stored or preferred and display appropriate icon
+  if (theme === "dark") {
+    document.documentElement.classList.remove("light");
+    document.getElementById("moon-icon").classList.remove("hidden");
+    document.getElementById("sun-icon").classList.add("hidden");
+  } else {
+    document.documentElement.classList.add("light");
+    document.getElementById("moon-icon").classList.add("hidden");
+    document.getElementById("sun-icon").classList.remove("hidden");
+  }
+
+  window.localStorage.setItem("theme", theme);
+
+  const handleToggleClick = () => {
+    // Toggle the icons' visibility upon user change
+    document.getElementById("sun-icon").classList.toggle("hidden");
+    document.getElementById("moon-icon").classList.toggle("hidden");
+
+    const element = document.documentElement;
+    element.classList.toggle("light");
+    const isLight = element.classList.contains("light");
+    localStorage.setItem("theme", isLight ? "light" : "dark");
+  };
+
+  document
+    .getElementById("theme-toggle")
+    ?.addEventListener("click", handleToggleClick);
+</script>
