Switch fullstop to other side in Arabic phrase

--- a/mechanical-metal/src/components/footer.astro
+++ b/mechanical-metal/src/components/footer.astro
@@ -5,7 +5,7 @@
 <footer class="footer">
   <div class="ftr-head">
     <div>
-      <h2>Thanks for visiting,<br> وَعَلَيْكُمُ ٱلسَّلَامُ.</h2>
+      <h2>Thanks for visiting,<br> .وَعَلَيْكُمُ ٱلسَّلَامُ</h2>
     </div>
     <div>
       <h3>Quicks Links</h3>
