--- a/mechanical-metal/src/pages/index.astro
+++ b/mechanical-metal/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import HomeBanner from "../components/homeBanner.astro";
-import ProjectCard from "../components/projectCard.astro";
+import ProjectsSection from "../components/projectsSection.astro";
 import SkillsSection from "../components/skillsSection.astro";
 import BaseLayout from "../layouts/baseLayout.astro";
 
@@ -12,6 +12,7 @@ const layoutProps = {
 <BaseLayout {layoutProps}>
   <HomeBanner />
   <h1>Test</h1>
+  <ProjectsSection />
   <SkillsSection />
 </BaseLayout>
 
