Align footer columns to start instead of center

--- a/mechanical-metal/src/components/footer.astro
+++ b/mechanical-metal/src/components/footer.astro
@@ -37,7 +37,7 @@
       </a>
     </div>
   </div>
-  <section class="flex center">
+  <section class="flex center flex-start margin2">
     <div>
       <h3>aabuharrus.dev</h3>
       <p>Built Using</p>
