--- a/mechanical-metal/src/pages/index.astro
+++ b/mechanical-metal/src/pages/index.astro
@@ -3,6 +3,7 @@ import HomeBanner from "../components/homeBanner.astro";
 import ProjectsSection from "../components/projectsSection.astro";
 import SkillsSection from "../components/skillsSection.astro";
 import BaseLayout from "../layouts/baseLayout.astro";
+import SkillCarousel from "../components/skillCarousel.astro";
 
 const layoutProps = {
   title: "aabuharrus",
@@ -14,6 +15,7 @@ const layoutProps = {
   <h1>Test</h1>
   <ProjectsSection />
   <SkillsSection />
+  <SkillCarousel />
 </BaseLayout>
 
 <!-- 
