Refactor index to accomodate changes in  Skills' section

--- a/mechanical-metal/src/pages/index.astro
+++ b/mechanical-metal/src/pages/index.astro
@@ -12,35 +12,7 @@ const layoutProps = {
 
 <BaseLayout {layoutProps}>
   <HomeBanner />
-  <h1>Test</h1>
   <ProjectsSection />
   <SkillsSection />
-  <SkillCarousel />
+  <!-- <SkillCarousel /> -->
 </BaseLayout>
-
-<!-- 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>aabuharrus</title>
-  </head>
-  <body>
-
-	<header>
-		<Navbar/>
-	</header>
-
-	<main>
-		<HomeBanner/>
-	</main>
-
-
-	<Footer></Footer>
-    <script>
-		// Add the script imports here laters
-	</script>
-  </body>
-</html> -->
