--- a/mechanical-metal/src/pages/index.astro
+++ b/mechanical-metal/src/pages/index.astro
@@ -16,5 +16,5 @@ const layoutProps = {
    <Bio/>
   <ProjectsSection />
   <SkillsSection />
-  <!-- TODO: Interests go here -->
+  <!-- TODO: Contact goes here -->
 </BaseLayout>
