Add description and update TODO comment

--- a/mechanical-metal/src/components/skillsSection.astro
+++ b/mechanical-metal/src/components/skillsSection.astro
@@ -3,19 +3,27 @@ import { getCollection } from "astro:content";
 import SkillCard from "./skillCard.astro";
 import SkillCarousel from "./skillCarousel.astro";
 
-// TODO: I eventually want to make the carousel with the pop-ups
-//  but first let's try making the stuff render...
-
 const skills = await getCollection("skills");
 ---
 
+<!-- TODO: 
+  1. Make the responsive and adaptive flex gallery-style with the cards.
+  2. Max of 8 skillCards then make Reste button "jump" to urge user to reset.
+  -->
 <section id="Skills">
   <h1>Skills</h1>
+  <p>
+    Like many with a passion for programming, I've tried out many languages and
+    frameworks.
+  </p>
+  <p>Some I use frequently, others only once...</p>
   <div class="flex">
     {skills.map((skill: any) => <SkillCard skillProps={skill} />)}
   </div>
   <div class="center">
-    <button id="skill-reset" class="outline-btn hidden" onclick="reset()">Reset</button>
+    <button id="skill-reset" class="outline-btn hidden" onclick="reset()"
+      >Reset</button
+    >
   </div>
   <SkillCarousel />
 </section>
