Update the TODO comment

--- a/mechanical-metal/src/components/projectCard.astro
+++ b/mechanical-metal/src/components/projectCard.astro
@@ -2,6 +2,14 @@
 const { projectProps } = Astro.props;
 ---
 
+<!-- 
+  TODO:
+  1. Add the tags
+  2. Add the GitHub Repos if available -> use SVG icon
+  3. Adjust the spacing and structure
+  4. Consider some spicy CSS effects and or animations for projects (Carousel is boring)
+ -->
+
 <section class="padding2 container card left-accent-tab">
   <h2>/{projectProps.data.name}</h2>
   <div class="flex">
