Fix the navbar to the top

--- a/mechanical-metal/src/components/navbar.astro
+++ b/mechanical-metal/src/components/navbar.astro
@@ -260,6 +260,12 @@
     justify-content: space-between;
     padding: var(--spacing2);
     background-color: var(--subbackground);
+    /* These lines fix the navbar to the top */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
   }
   .navbar .logo {
     width: 10%;
