Shuffle the place of the `main` element

--- a/mechanical-metal/src/pages/index.astro
+++ b/mechanical-metal/src/pages/index.astro
@@ -10,11 +10,14 @@ const layoutProps = {
   title: "aabuharrus",
 };
 ---
+
 <BaseLayout {layoutProps}>
   <Banner2 />
-  <!-- <HomeBanner /> -->
-   <Bio/>
-  <ProjectsSection />
-  <SkillsSection />
+  <main>
+    <!-- <HomeBanner /> -->
+    <Bio />
+    <ProjectsSection />
+    <SkillsSection />
+  </main>
   <!-- TODO: Contact goes here -->
 </BaseLayout>
